ganglia_docdir = $(docdir)/contrib/ganglia

ganglia_doc_DATA = \
	ganglia/README \
	ganglia/ganglia_ipmi_sensors.pl

libipmimonitoring_docdir = $(docdir)/contrib/libipmimonitoring

libipmimonitoring_doc_DATA = \
	libipmimonitoring/ipmimonitoring-sel.c \
	libipmimonitoring/ipmimonitoring-sensors.c

nagios_docdir = $(docdir)/contrib/nagios

nagios_doc_DATA = \
	nagios/README \
	nagios/nagios_ipmi_sensors.pl

pet_docdir = $(docdir)/contrib/pet

pet_doc_DATA = \
	pet/README \
	pet/check_rmcpping \
	pet/ipminodes.cfg \
	pet/petalert.pl

EXTRA_DIST = \
	$(ganglia_doc_DATA) \
	$(libipmimonitoring_doc_DATA) \
	$(nagios_doc_DATA) \
	$(pet_doc_DATA)

