#  build and install the .info pages
info_TEXINFOS =  freeipmi-faq.texi

CLEANFILES = *~
DISTCLEANFILES = .deps/*.P

EXTRA_DIST = \
	freeipmi-coding.txt \
	freeipmi-hostrange.txt \
	freeipmi-libraries.txt \
	freeipmi-bugs-and-workarounds.txt

docdir = $(datadir)/doc/$(PACKAGE)

doc_DATA = $(EXTRA_DIST)



