#  build and install the .info pages
info_TEXINFOS =  freeipmi-faq.texi

CLEANFILES = *~
DISTCLEANFILES = .deps/*.P

EXTRA_DIST = \
	freeipmi-coding.txt \
	freeipmi-design.txt \
	freeipmi-hostrange.txt \
	freeipmi-libraries.txt \
	freeipmi-testing.txt \
	freeipmi-bugs-issues-and-workarounds.txt \
	freeipmi-oem-documentation-requirements.txt

doc_DATA = $(EXTRA_DIST)



